09/30/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Update for linking diretly to readline.
	* configure.in: Only allow readline version 5.1.
	Remove the rlctx interface and add the rline interface.
	* configure: Autogenerated.
	* various/Makefile.am (SUBDIRS): Changed rlctx to rline.
	* various/Makefile.in: Autogenerated.

09/12/2005 Bob Rossi <bob@brasko.net>

   * NEWS: Update with syntax bug fix.

08/12/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add item for next release.

08/10/2005 Bob Rossi <bob@brasko.net>

	* configure.in (RL_LIB_READLINE_VERSION): Detect 4.2a as OK.
	(AM_INIT_AUTOMAKE): Version update.
	* configure: Autogenerated.
	* NEWS: Update fix info.

version 0.5.3 (08/08/2005):

08/08/2005 Bob Rossi <bob@brasko.net>

	* configure.in (AM_INIT_AUTOMAKE): Version update.
	* configure: Autogenerated.
	* NEWS: Update file for release.

08/02/2005 Bob Rossi <bob@brasko.net>

	* config/readline_check_version.m4: Add new macro.

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* aclocal.m4 (BASH_CHECK_LIB_TERMCAP): Added.
	(RL_LIB_READLINE_VERSION): Added.
	* config.h.in: Autogenerated.
	* configure: Autogenerated.
	* configure.in: Check readline version to link against.
	* various/Makefile.in: Autogenerated.
	* NEWS: Add release note.

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (SUBDIRS): Remove READLINE_DIR.
	(EXTRA_DIST): Remove READLINE_DIR.
	* Makefile.in: Autogenerated.
	* NEWS: Readline is no longer packaged.
	* configure.in: Remove debugging information.
	Remove internal readline configuration.
	* various/Makefile.in: Autogenerated.

07/28/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (EXTRA_DIST): Undo last commit.
	* Makefile.in: Autogenerated.

07/28/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (EXTRA_DIST): Fix READLINE_DIR directory.
	* Makefile.in: Autogenerated.

07/27/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update todo task for release after .5.3.

07/27/2005 Bob Rossi <bob@brasko.net>
