@@ -1,3 +1,7 @@
+   * CGDB now allows the user to use the \ character for line continuation
+     purposes. GDB handles this and now CGDB also handles this. Before this,
+     CGDB would break if the user attempted to do line continuation.
+   
    * CGDB now depends on readline 5.1.
 
    * CGDB no longer needs to do a fork to communicate data back and forth to 
@@ -12,11 +16,6 @@
      string literal, the CGDB syntax tokenizer would be built incorrectly
      resulting in incorret file highlighting.
    
-   * Ben Schomp reported that the new autoconf macro that detects the 
-     version of readline is slightly incorrect. It would not understand
-     that the version 4.2a is OK. The match has been changed from 4.2 to
-     4.2*. This should resolve that problem.
-
 cgdb-0.5.3 (08/08/2005)
    
    * CGDB now can detect the version of readline that it is going to link against.
